# unified-timeline

./: .env.development  .env.example  .env.local  .env.local.example  .env.production  .gitignore  App.tsx  CLAUDE.md  Endringsordre.md  LICENSE  MOCK_API_README.md  NS_8407.md  PLAN-catenda-sync.md  Procfile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  THIRD-PARTY-NOTICES.md  constants.ts  document-api-openapi.yaml  eslint.config.js  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  project-api-openapi.yaml  qa_findings_detailed.md  qa_report.md  qa_validate_code.py  staticwebapp.config.json  statusConstants.ts  tailwind.config.js  test.html  topic-api-openapi.yaml  tsconfig.json  types.ts  vite.config.ts  (+2 more)
backend/: .coveragerc  .env.example  .env.test  .gitignore  MIGRATION.md  Makefile  STRUCTURE.md  app.py  audit.py  catenda_api_tester.py  catenda_auth.py  catenda_interactive_menu.py  constants.py  filtering_config.py  function_app.py  generated_constants.py  host.json  local.settings.json.example  magic_link.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup_authentication.py  setup_webhooks.py  startup.txt  webhook_security.py
backend/api/: __init__.py  validators.py
backend/constants/: __init__.py  grunnlag_categories.py  vederlag_methods.py
backend/core/: __init__.py  config.py  constants.py  container.py  cors_config.py  generated_constants.py  logging_config.py  request_context.py  status_helpers.py  system_context.py  unit_of_work.py
backend/docs/: API.md  COMPLEXITY_REFACTORING_PLAN.md  DATABASE_ARCHITECTURE.md  FULL_FLOW_TEST_PLAN.md  openapi.yaml
backend/examples/: unified_timeline_example.py
backend/functions/: __init__.py  adapters.py
backend/integrations/catenda/: __init__.py  _demo.py  auth.py  base.py  client.py  exceptions.py
backend/integrations/dalux/: __init__.py  client.py
backend/lib/: __init__.py  catenda_factory.py  dalux_factory.py  decorators.py  project_context.py
backend/lib/auth/: __init__.py  csrf_protection.py  entra_id.py  magic_link.py  project_access.py  supabase_validator.py
backend/lib/cloudevents/: __init__.py  http_binding.py  schemas.py
backend/lib/helpers/: __init__.py  responses.py  sak_lookup.py  version_control.py
backend/lib/monitoring/: __init__.py  audit.py
backend/lib/security/: __init__.py  rate_limiter.py  validation.py  webhook_security.py
backend/lib/supabase/: __init__.py  client.py  exceptions.py  retry.py
backend/mcp/: __init__.py  server.py
backend/migrations/: 001_dalux_sync_tables.sql  002_fravik_events_table.sql  003_sak_relations.sql  004_projects_table.sql  005_project_rls_policies.sql  006_bim_tables.sql  README.md
backend/mocks/: __init__.py  mock_events.py
backend/models/: __init__.py  api_responses.py  bh_svar.py  bim_link.py  cloudevents.py  events.py  fravik_events.py  fravik_state.py  koe_revisjon.py  project.py  project_membership.py  sak.py  sak_metadata.py  sak_state.py  sync_models.py  varsel.py
backend/repositories/: __init__.py  base_repository.py  bim_link_repository.py  csv_repository.py  event_repository.py  membership_repository.py  project_repository.py  relation_repository.py  sak_metadata_repository.py  supabase_event_repository.py  supabase_sak_metadata_repository.py  sync_mapping_repository.py  user_group_repository.py
backend/routes/: analytics_routes.py  auth_routes.py  bim_link_routes.py  case_routes.py  catenda_webhook_routes.py  cloudevents_routes.py  endringsordre_routes.py  error_handlers.py  event_routes.py  forsering_routes.py  fravik_routes.py  koe_routes.py  letter_routes.py  mcp_routes.py  membership_routes.py  oauth_auto_consent_routes.py  oauth_consent_routes.py  project_routes.py  related_cases_utils.py  svar_routes.py  sync_routes.py  utility_routes.py  varsel_routes.py  webhook_routes.py  wellknown_routes.py
backend/scripts/: KOE_Backend_API.postman_collection.json  __init__.py  backfill_relations.py  backfill_reporting_cache.py  catenda_menu.py  create_test_sak.py  dalux_menu.py  dalux_sync.py  embed_lovdata.py  explore_bim_objects.py  explore_dalux_plans.py  generate_openapi.py  manual_testing.sh  register_mcp_oauth_client.py  setup_authentication.py  setup_webhooks.py  sync_structures_only.py  test_attachment_flow.py  test_full_flow.py  test_pdf_generator.py  test_relations.py  test_task_data.py  update_section_addresses.py  webhook_listener.py
backend/scripts/lib/: __init__.py  catenda_setup.py
backend/services/: __init__.py  base_sak_service.py  business_rules.py  catenda_comment_generator.py  catenda_service.py  catenda_sync_service.py  catenda_webhook_service.py  dalux_sync_service.py  endringsordre_service.py  forsering_service.py  fravik_service.py  koe_service.py  letter_pdf_generator.py  lovdata_service.py  lovdata_structure_parser.py  lovdata_supabase.py  lovdata_sync.py  lovdata_vector_search.py  related_cases_service.py  reportlab_pdf_generator.py  sak_api_service.py  sak_creation_service.py  svar_service.py  timeline_service.py  varsel_service.py  weasyprint_generator.py  webhook_service.py
backend/templates/: letter_template.html
backend/tests/: conftest.py
backend/tests/test_api/: test_cloudevents_api.py  test_context_endpoint.py  test_membership_api.py  test_project_api.py  test_validators.py
backend/tests/test_auth/: test_magic_link_decorator.py  test_project_access.py  test_session_based_magic_links.py
backend/tests/test_core/: test_config.py  test_container.py  test_unit_of_work.py
backend/tests/test_integrations/: test_catenda_client_retry.py
backend/tests/test_lib/: test_helpers.py  test_supabase_retry.py
backend/tests/test_models/: test_cloudevents.py  test_event_parsing.py  test_events.py  test_fravik_events.py  test_project_membership.py  test_sak.py  test_sak_state_computed.py
backend/tests/test_monitoring/: __init__.py  test_audit.py
backend/tests/test_repositories/: test_csv_repository.py  test_event_repository.py  test_membership_repository.py  (+1 more)
backend/utils/: filtering_config.py  logger.py  network.py
(+839 files in other folders)
