# ==============================================================================
# KOE Backend - Python Project Configuration
# ==============================================================================

[project]
name = "koe-backend"
version = "0.1.0"
description = "Backend for KOE (Krav om Endring) automation system"
requires-python = ">=3.11"

# ==============================================================================
# Ruff - Fast Python Linter & Formatter
# ==============================================================================
# Replaces: flake8, black, isort
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
# Target Python version
target-version = "py311"

# Same as Black
line-length = 88
indent-width = 4

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
# Enable rules:
# E = pycodestyle errors
# F = Pyflakes
# B = flake8-bugbear (common bugs)
# I = isort (import sorting)
# UP = pyupgrade (modern Python syntax)
# SIM = flake8-simplify
select = ["E", "F", "B", "I", "UP", "SIM"]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (needed for FastAPI/Flask)
    "SIM108", # Use ternary operator (not always clearer)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# Group imports: stdlib, third-party, first-party
known-first-party = ["models", "services", "routes", "repositories", "utils", "integrations"]

[tool.ruff.format]
# Like Black, use double quotes
quote-style = "double"

# Like Black, indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# ==============================================================================
# MyPy - Type Checker
# ==============================================================================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

# ==============================================================================
# Pytest
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
