# ==============================================================================
# KOE Backend - Python Project Configuration
# ==============================================================================

[project]
name = "koe-backend"
version = "0.1.0"
description = "Backend for KOE (Krav om Endring) automation system"
requires-python = ">=3.11"

# ==============================================================================
# Ruff - Fast Python Linter & Formatter
# ==============================================================================
# Replaces: flake8, black, isort
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
# Target Python version
target-version = "py311"

# Same as Black
line-length = 88
indent-width = 4

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
# Enable rules:
# E = pycodestyle errors
# F = Pyflakes
# B = flake8-bugbear (common bugs)
# I = isort (import sorting)
# UP = pyupgrade (modern Python syntax)
# SIM = flake8-simplify
select = ["E", "F", "B", "I", "UP", "SIM"]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (needed for FastAPI/Flask)
    "SIM108", # Use ternary operator (not always clearer)
    "SIM102", # Nested if - sometimes clearer than combined
    "SIM117", # Nested with - often clearer separate
    "SIM103", # Return condition directly - less readable
    "SIM105", # Use contextlib.suppress - try/except/pass often clearer
    "SIM110", # Use any() - explicit loop often clearer
    "SIM115", # Context manager for open - not always possible (lock patterns)
    "SIM116", # Dict instead of if/elif - less readable for mapping
    "UP007",  # Union[X, Y] vs X | Y - Union more readable for long type lists
    "B905",   # zip() without strict= (Python 3.10+ - ikke kritisk)
    "B904",   # TODO: Exception chaining (raise from) - fikses separat
    "B011",   # assert False in demo code - OK
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Entry points må laste .env før andre imports
"app.py" = ["E402"]
"function_app.py" = ["E402"]
# Scripts har ofte path-setup før imports og demo-kode
"scripts/*.py" = ["E402", "F841"]
# Services med conditional imports
"services/reportlab_pdf_generator.py" = ["E402"]
# Test-filer har ofte setup før imports, ubrukte variabler, og brede exceptions
"tests/**/*.py" = ["E402", "F841", "B007", "B017"]
"conftest.py" = ["E402"]

[tool.ruff.lint.isort]
# Group imports: stdlib, third-party, first-party
known-first-party = ["models", "services", "routes", "repositories", "utils", "integrations"]

[tool.ruff.format]
# Like Black, use double quotes
quote-style = "double"

# Like Black, indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# ==============================================================================
# MyPy - Type Checker
# ==============================================================================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

# ==============================================================================
# Pytest
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
